# ANSITerminal

./: .gitignore  ANSITerminal.opam  CHANGES.md  Makefile
.github/workflows/: main.yml
src/: ANSITerminal.ml  ANSITerminal.mli  ANSITerminal_common.ml  ANSITerminal_stubs.c  ANSITerminal_unix.ml  ANSITerminal_win.ml  ANSITerminal_win_stubs.c  dune
tests/: test.ml
