(library
 (name          ANSITerminal)
 (public_name   ANSITerminal)
 (modules       ANSITerminal ANSITerminal_common ANSITerminal_unix ANSITerminal_win)
 (foreign_stubs (language c) (names ANSITerminal_stubs))
 (synopsis "Basic control of ANSI compliant terminals and the windows shell")
 (libraries unix bytes))
